--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     width: 475px;
     border-style: solid;
     border-width: 2px;
-    border-color: black;
+    border-color: #000;
     border-radius: 10px;
     padding: 25px 10px;
 }
@@ -64,4 +64,40 @@ body {
 option i {
     font-style: italic;
     font-weight: lighter;
+}
+
+.input-container {
+    display: inline;
+    position: relative;
+}
+
+.search-results {
+    position: absolute;
+    font-size: 0.75em;
+    left: -5px;
+    right: 0;
+    top: 9px;
+    width: 135px;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: solid;
+    border-color: #eee;
+    border-width: 1px;
+    border-radius: 0 0 5px 5px;
+    padding: 0;
+    list-style: none;
+    text-align: left;
+    background-color: #fff;
+}
+
+.search-results li {
+    padding: 10px;
+}
+
+.search-results li:hover {
+    background-color: #eee;
+}
+
+.translation {
+    color: #777;
 }
